jade/testData/highlighting/tabsAndSpaces1.jade
aaa
<error descr="Tabs and spaces both used">  </error>bbb
<error descr="Tabs and spaces both used">		</error>ccc
